--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="dark">
-    <ion-title>account</ion-title>
+    <ion-title>Account</ion-title>
 	
   </ion-navbar>
 
@@ -25,7 +25,7 @@
 		View subscription option >
 	  </button> 
 
-	  <button ion-item >
+	  <button ion-item (click)="openregister()">
 		Registration
 	  </button> 
 
